fixed alignment of video overlay for RTL language pages

--- a/src/app/css/_video.scss
+++ b/src/app/css/_video.scss
@@ -1,4 +1,6 @@
-.video-container {}
+.video-container {
+  direction: ltr;
+}
 
 .video {
   margin: 0 auto;
